// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Report page rendering render Report being logged in english 1`] = `
<div>
  <div>
    <div>
      <div
        class="mrg-begin btn-group btn-group-lg"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-info"
          type="button"
        >
          Kids
        </button>
        <div
          aria-hidden="true"
          class="drop btn dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <div>
            <div
              data-child="general"
            >
              Example
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="left-filter"
    >
      <span>
        Filters:
      </span>
       
      <br />
       
      <br />
      <div
        class="filter-align"
      >
        <input
          data-filter="Discord"
          type="checkbox"
        />
         Discord 
        <br />
        <input
          data-filter="plugin"
          type="checkbox"
        />
         
        Internet browsing
         
        <br />
      </div>
    </div>
    <div
      class="btn content-right"
      style="width: 70%;"
    >
      <div
        class="summary"
      />
    </div>
  </div>
</div>
`;

exports[`Testing the Report page rendering render Report being logged in french 1`] = `
<div>
  <div>
    <div>
      <div
        class="mrg-begin btn-group btn-group-lg"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-info"
          type="button"
        >
          Enfants
        </button>
        <div
          aria-hidden="true"
          class="drop btn dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <div>
            <div
              data-child="general"
            >
              Example
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="left-filter"
    >
      <span>
        Filtres :
      </span>
       
      <br />
       
      <br />
      <div
        class="filter-align"
      >
        <input
          data-filter="Discord"
          type="checkbox"
        />
         Discord 
        <br />
        <input
          data-filter="plugin"
          type="checkbox"
        />
         
        Navigation internet
         
        <br />
      </div>
    </div>
    <div
      class="btn content-right"
      style="width: 70%;"
    >
      <div
        class="summary"
      />
    </div>
  </div>
</div>
`;

exports[`Testing the Report page rendering render Report not being logged in english 1`] = `
<div>
  <div>
    <div
      class="responsive-image"
    >
      <h1
        class="text-xl-center forbidden"
      >
        403 Accès interdit
      </h1>
      <br />
      <img
        alt="forbidden"
        class="responsive-image"
        src="fogg-no-comments.png"
      />
    </div>
  </div>
</div>
`;

exports[`Testing the Report page rendering render Report not being logged in french 1`] = `
<div>
  <div>
    <div
      class="responsive-image"
    >
      <h1
        class="text-xl-center forbidden"
      >
        403 Accès interdit
      </h1>
      <br />
      <img
        alt="forbidden"
        class="responsive-image"
        src="fogg-no-comments.png"
      />
    </div>
  </div>
</div>
`;

exports[`Testing the Report page rendering renders Report without crashing (not connected) in any language 1`] = `
<div>
  <div>
    <div
      class="responsive-image"
    >
      <h1
        class="text-xl-center forbidden"
      >
        403 Accès interdit
      </h1>
      <br />
      <img
        alt="forbidden"
        class="responsive-image"
        src="fogg-no-comments.png"
      />
    </div>
  </div>
</div>
`;
